--- a/src/app/components/modals/reg-prot-table-modal-component/reg-prot-table-modal-component.component.scss
+++ b/src/app/components/modals/reg-prot-table-modal-component/reg-prot-table-modal-component.component.scss
@@ -44,6 +44,8 @@
   width: 150px;
 }
 
+
+
 .protocol {
   border-collapse: collapse;
   max-height: 600px;
@@ -139,4 +141,9 @@
   background-color: rgba(255, 221, 0, 0.7);
 }
 
-
+.th-with-input{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 10px;
+}
